# CleanArchitecture-FastAPI

./: .env.db.example  .env.example  .env.server.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
application/exceptions/: base.py  email_already_exist.py  email_does_not_exist.py  invalid_password.py  referral_code_already_exist.py  referral_code_not_exist.py  too_short_lifetime.py  user_not_found.py
application/interfaces/: referral_code_repository.py  refresh_token_repository.py  user_id_by_referral_code_service.py  user_repository.py
application/schemas/: referral_code.py  tokens.py
application/settings/: refresh_token.py
application/usecases/: auth_user.py  create_referral_code.py  delete_referral_code.py  get_referral_code_by_email.py  get_referrals_by_referrer_id.py  register_user.py
domain/entities/: base.py  referral_code.py  refresh_token.py  user.py
domain/exceptions/: validation.py
infrastructure/common/repo/: cleanuping_referral_code.py
infrastructure/common/services/: redis.py  redis_referral_code.py  user_id_by_referral_code.py
infrastructure/sql/alembic/: env.py
presenter/: app.py  dependencies.py
presenter/routes/: auth.py  referral_codes.py
presenter/schemes/: auth_request.py  base.py  create_referral_response.py  jwt_object.py  referral_code_create_request.py  register_request.py  tokens_response.py  tokens_set.py
presenter/services/: jwt.py
presenter/settings/: db.py  jwt.py
settings/: db.py  jwt.py  redis.py  redis_referral_code.py  refresh_token.py
(+12 files in other folders)
