[project]
name = "refsrv"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.115.8,<0.116.0)", "bcrypt (>=4.2.1,<5.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

