[project]
name = "refsrv"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.115.8,<0.116.0)", "bcrypt (>=4.2.1,<5.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)", "alembic (>=1.14.1,<2.0.0)", "asyncpg (>=0.30.0,<0.31.0)", "pyjwt[crypto] (>=2.10.1,<3.0.0)", "redis (>=5.2.1,<6.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

